# gd-bot

./: CMakeLists.txt  about.md  main.cpp  mod.json
.github/workflows/: build.yml
src/: main.cpp
